--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: todoapp
-    env: java
+    env: docker
     buildCommand: ./mvnw clean install -DskipTests
     startCommand: java -jar target/todoapp-0.0.1-SNAPSHOT.jar
     envVars:
