--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # For Production (Render) - Will use environment variable
-# spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${DATABASE_URL}
 
 # Logging
 logging.level.org.springframework.web=INFO
