--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,35 @@
-
-# Application Name
+# -----------------------------
+# Application
+# -----------------------------
 spring.application.name=todoapp
 
-# Server Port
-server.port=8080
+# -----------------------------
+# Server
+# -----------------------------
+# Render provides the PORT environment variable
+server.port=${PORT:8080}
 
-# Database Configuration (Local PostgreSQL)
-spring.datasource.url=jdbc:postgresql://localhost:5432/tododb
-spring.datasource.username=postgres
-spring.datasource.password=naruto
+# -----------------------------
+# Database
+# -----------------------------
+# Use DATABASE_URL if set (Render), otherwise fallback to local PostgreSQL
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/tododb}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:naruto}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate Configuration
+# -----------------------------
+# JPA / Hibernate
+# -----------------------------
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# For Production (Render) - Will use environment variable
-spring.datasource.url=${DATABASE_URL}
+# Spring Boot will auto-detect the dialect; no need to specify explicitly
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# -----------------------------
 # Logging
+# -----------------------------
 logging.level.org.springframework.web=INFO
 logging.level.com.example.todoapp=DEBUG
