--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # -----------------------------
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.open-in-view=false
+
 spring.jpa.properties.hibernate.format_sql=true
 
 # Spring Boot will auto-detect the dialect; no need to specify explicitly
